# land-finder

./: .env.example  .gitignore  pyproject.toml
dashboard/: package-lock.json  package.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/api/criteria/: route.ts
dashboard/src/app/criteria/: page.tsx
dashboard/src/app/listings/: page.tsx
dashboard/src/app/saved/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/components/: criteria-form.tsx  filter-sidebar.tsx  listing-card.tsx  listing-map.tsx  listings-table.tsx  nav.tsx
dashboard/src/lib/: db.ts  format.ts  types.ts
docs/plans/: 2026-03-01-land-finder-design.md  2026-03-01-land-finder-implementation.md
scraper/: config.py  db.py  enrich_batch.py  main.py  models.py  scheduler.py  setup_criteria.py
scraper/pipeline/: alerter.py  deduplicator.py  enricher.py  filter.py  normalizer.py  orchestrator.py
scraper/spiders/: base.py  browser.py  craigslist.py  facebook.py  land_com.py  landwatch.py  realtor.py  zillow.py
scraper/watchtower_client/: VENDORED.md  __init__.py  _fingerprint.py  _supa.py  capture.py  monitor.py
tests/: test_alerter.py  test_craigslist_spider.py  test_db.py  test_deduplicator.py  test_enricher.py  test_facebook_spider.py  test_filter.py  test_land_com_spider.py  test_landwatch_spider.py  test_models.py  test_normalizer.py  test_orchestrator.py  test_spider_base.py  test_zillow_spider.py
tests/fixtures/: craigslist_sample.html  facebook_sample.html  land_com_sample.html  landwatch_sample.html  zillow_sample.html
(+7 files in other folders)
